# fps_network_protocol

./: .gitignore  AWS_CLOUDFLARE_DEPLOYMENT.md  BROWSER_TESTING_GUIDE.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  MIGRATION_REPORT.md  QUICSERVER_BROWSER_MIGRATION.md  README.md  amplify.yml  cert.pem  connect-tokyo.sh  connect-us.sh  customHttp.yml  game-server-key.pem  start-tokyo.sh  start-us.sh  stop-tokyo.sh  stop-us.sh
.github/workflows/: deploy.yml
fps_game/: FPS Networking Demo.html  FPS Networking Demo.pck  README.md  cert.pem  export_presets.cfg  index.html  localhost-key.pem  localhost.pem  project.godot  serve.py  serve_https.py  webtransport_bridge.js
fps_game/.godot/editor/: Main.tscn-editstate-4a24720ee5e787dbe30abc634fa3679d.cfg  Main.tscn-folding-4a24720ee5e787dbe30abc634fa3679d.cfg  editor_layout.cfg  filesystem_cache10  filesystem_update4  project_metadata.cfg  script_editor_cache.cfg
fps_game/assets/: webtransport_bridge.js
fps_game/scenes/: Main.tscn  MainMenu.tscn  RemotePlayer.tscn  main_menu.gd  main_menu.gd.uid
fps_game/scripts/: LocalPlayer.gd  LocalPlayer.gd.uid  Main.gd  Main.gd.uid  NetworkManager.gd  NetworkManager.gd.uid  RemotePlayer.gd  RemotePlayer.gd.uid
infra/: game-server.service  instance_id.txt  setup.sh  start.sh  status.sh  stop.sh
protocol/src/: lib.rs
server/: Cargo.toml  cert.der  cert.pem  cert_expiry.txt  key.der  key.pem
server/src/: cert.der  cert.rs  cert_expiry.txt  game.rs  key.der  legacy.rs  main.rs  player.rs  state.rs  wt.rs
