[package]
name = "game-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "game-server"
path = "src/main.rs"

[dependencies]
protocol = { path = "../protocol" }

tokio = {version = "1", features = ["full"]}
quinn = "0.10"
rcgen = "0.11"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
bytes = "1"
h3 = "0.0.3"

rand = "0.10.1"